# hedger

./: README.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
hedger/: __init__.py  util.py
hedger/data/: tickers.txt
hedger/scrap/: web_results_search.py
sf/: __init__.py  util.py
