[metadata]
name = hedger
version = 0.0.3
url = https://github.com/thorwhalen/hedger
platforms = any
description_file = README.md
license = apache-2.0
author = Thor Whalen
description = Semantic Finance
long_description = file:README.md
long_description_content_type = text/markdown
root_url = https://github.com/thorwhalen/
keywords = 
		finance
		natural language processing
		NLP
		transformers
display_name = hedger

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	guise
	importlib_resources

